--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,24 @@
-PyQt6
-mysql-connector-python
+aniso8601==10.0.1
+attrs==25.3.0
+blinker==1.9.0
+click==8.1.8
+colorama==0.4.6
+Flask==3.1.0
+flask-cors==5.0.1
+Flask-JWT-Extended==4.7.1
+flask-restx==1.3.0
+importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+MarkupSafe==3.0.2
+PyJWT==2.10.1
+PySide6==6.9.0
+PySide6_Addons==6.9.0
+PySide6_Essentials==6.9.0
+pytz==2025.2
+referencing==0.36.2
+rpds-py==0.24.0
+shiboken6==6.9.0
+Werkzeug==3.1.3
