--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,119 @@
+alembic==1.15.2
+altair==5.5.0
+altgraph==0.17.4
 aniso8601==10.0.1
+annotated-types==0.7.0
+antiorm==1.2.1
+anyio==4.9.0
 attrs==25.3.0
+bcrypt==4.3.0
 blinker==1.9.0
+bottle==0.13.3
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
+clr_loader==0.2.7.post0
 colorama==0.4.6
+customtkinter==5.2.2
+darkdetect==0.8.0
+db==0.1.1
+dearpygui==2.0.0
+decorator==5.2.1
+distlib==0.3.9
+docutils==0.21.2
+fastapi==0.115.12
+filetype==1.2.0
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-JWT-Extended==4.7.1
+Flask-Migrate==4.1.0
 flask-restx==1.3.0
+Flask-SQLAlchemy==3.1.1
+future==1.0.0
+geocoder==1.38.1
+gitdb==4.0.12
+GitPython==3.1.44
+greenlet==3.2.1
+h11==0.16.0
+idna==3.10
 importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
+Kivy==2.3.1
+Kivy-Garden==0.1.5
+kivy_deps.angle==0.4.0
+kivy_deps.glew==0.3.1
+kivy_deps.sdl2==0.8.0
+Mako==1.3.10
 MarkupSafe==3.0.2
+mysql-connector-python==9.3.0
+narwhals==1.37.1
+numpy==2.2.5
+packaging==24.2
+pandas==2.2.3
+pefile==2023.2.7
+pillow==11.2.1
+protobuf==6.30.2
+proxy_tools==0.1.0
+pyarrow==20.0.0
+pycparser==2.22
+pydantic==2.11.4
+pydantic_core==2.33.2
+pydeck==0.9.1
+Pygments==2.19.1
+pyinstaller==6.13.0
+pyinstaller-hooks-contrib==2025.3
 PyJWT==2.10.1
+pynsist==2.8
+pyperclip==1.9.0
+pypiwin32==223
+PyQt6==6.9.0
+PyQt6-Qt6==6.9.0
+PyQt6_sip==13.10.0
 PySide6==6.9.0
 PySide6_Addons==6.9.0
 PySide6_Essentials==6.9.0
+python-dateutil==2.9.0.post0
+pythonnet==3.0.5
 pytz==2025.2
+pywebview==5.4
+pywin32==310
+pywin32-ctypes==0.2.3
+qt-material==2.17
+qtmodern==0.2.0
+QtPy==2.4.3
+ratelim==0.1.6
 referencing==0.36.2
+requests==2.32.3
+requests_download==0.1.2
 rpds-py==0.24.0
+setuptools==79.0.1
 shiboken6==6.9.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+starlette==0.46.2
+streamlit==1.45.0
+tenacity==9.1.2
+tkinterdnd2==0.4.3
+tkintermapview==1.29
+toga==0.5.0
+toga-core==0.5.0
+toga-winforms==0.5.0
+toml==0.10.2
+tornado==6.4.2
+travertino==0.5.0
+ttkbootstrap==1.12.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.34.2
+watchdog==6.0.0
 Werkzeug==3.1.3
+yarg==0.1.10
